--- a/assets/core/public/index.html
+++ b/assets/core/public/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="yacd.ico" />
-    <link rel="icon" type="image/png" sizes="64x64" href="yacd-64.png" />
-    <link rel="icon" type="image/png" sizes="128x128" href="yacd-128.png" />
-    <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png" />
-    <meta name="apple-mobile-web-app-title" content="yacd">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="application-name" content="yacd" />
-    <meta name="description" content="Yet Another Clash Dashboard" />
-    <meta name="theme-color" content="#202020" />
-    <title>yacd</title>
-  <script type="module" src="./assets/index.70613665.js"></script>
-  <link rel="modulepreload" href="./assets/vendor.77250f59.js">
-  <link rel="stylesheet" href="./assets/index.18808c21.css">
-<link rel="manifest" href="./manifest.webmanifest"></head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/Dreamacro/clash/docs/logo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#f4f5f6" />
+    <meta name="description" content="Clash web port" />
+    <!--meta name="external-controller" content="http://secret@example.com:9090"-->
+    <title>Clash</title>
+    <script type="module" crossorigin src="./assets/index.2be60cee.js"></script>
+    <link rel="modulepreload" href="./assets/vendor.b22b5565.js">
+    <link rel="stylesheet" href="./assets/index.5510af76.css">
+  <link rel="manifest" href="./manifest.webmanifest"></head>
   <body>
-    <div id="app" data-base-url="http://127.0.0.1:9090"></div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
     
   </body>
 </html>
